test/parseError.slq

def test[estate](
	prepareState: Π(n:!ℕ) → estate^n // error
){

} // error
